--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
@@ -7,7 +7,8 @@
     xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:system="using:System"
-    xmlns:views="using:Brainf_ckSharp.Shared.Models.Ide.Views">
+    xmlns:views="using:Brainf_ckSharp.Shared.Models.Ide.Views"
+    xmlns:winui="using:Microsoft.UI.Xaml.Controls">
 
     <!--Exception type template-->
     <DataTemplate
@@ -198,25 +199,12 @@
     <DataTemplate
         x:Key="MemoryStateTemploate"
         x:DataType="views:IdeResultWithSectionInfo">
-        <ListView
-            IsItemClickEnabled="False"
-            SelectionMode="None"
-            ItemsSource="{x:Bind Result.MachineState}">
-            <ListView.Resources>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Margin" Value="4"/>
-                    <Setter Property="Padding" Value="0"/>
-                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="VerticalAlignment" Value="Stretch"/>
-                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                </Style>
-            </ListView.Resources>
-            <ListView.ItemTemplate>
+        <winui:ItemsRepeater ItemsSource="{x:Bind Result.MachineState}">
+            <winui:ItemsRepeater.ItemTemplate>
                 <DataTemplate x:DataType="models:Brainf_ckMemoryCell">
                     <Grid RowSpacing="4">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="48"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
@@ -272,18 +260,18 @@
                             Foreground="#FFA0A0A0"/>
                     </Grid>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <ItemsWrapGrid
-                        AreStickyGroupHeadersEnabled="False"
-                        Orientation="Horizontal"
-                        ItemHeight="76"
-                        attachedProperties:ItemsWrapGridHelper.DesiredItemWidth="100"
-                        MaximumRowsOrColumns="5"/>
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-        </ListView>
+            </winui:ItemsRepeater.ItemTemplate>
+            <winui:ItemsRepeater.Layout>
+                <winui:UniformGridLayout
+                    Orientation="Horizontal"
+                    MinItemWidth="80"
+                    MinItemHeight="72"
+                    MinColumnSpacing="8"
+                    MinRowSpacing="8"
+                    MaximumRowsOrColumns="5"
+                    ItemsStretch="Fill"/>
+            </winui:ItemsRepeater.Layout>
+        </winui:ItemsRepeater>
     </DataTemplate>
 
     <!--Statistics-->
