Enabled DEBUG/RELEASE run modes

--- a/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
@@ -12,6 +12,7 @@
     <UserControl.DataContext>
         <views:IdeViewModel
             ScriptRunRequested="IdeViewModel_OnScriptRunRequested"
+            ScriptDebugRequested="IdeViewModel_OnScriptDebugRequested"
             CharacterAdded="ViewModelCharacterAdded"
             CharacterDeleted="ViewModel_CharacterDeleted"
             CodeLoaded="ViewModel_CodeLoaded"
