--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -16,6 +16,8 @@
     xmlns:models="using:Brainf_ckSharp.Shared.Models.Ide.Views"
     xmlns:collections="using:Microsoft.Toolkit.Collections"
     xmlns:subPages="using:Brainf_ckSharp.Shared.ViewModels.Controls.SubPages"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:uiCompositionAnimations="using:UICompositionAnimations.AttachedProperties"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -39,74 +41,178 @@
         Title="RUN"
         Background="#72000000">
 
-        <!--Semantic zoom-->
-        <SemanticZoom attachedProperties:SemanticZoomHelper.Source="{x:Bind ViewModel.Source, Mode=OneWay}">
-            <SemanticZoom.ZoomedInView>
+        <!--Visual states for the buttons-->
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="ButtonsHiddenState">
+                    <VisualState.StateTriggers>
+                        <StateTrigger IsActive="{x:Bind ViewModel.IsActive}"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="ButtonsPanel.IsHitTestVisible" Value="False"/>
+                    </VisualState.Setters>
+                    <VisualState.Storyboard>
+                        <Storyboard TargetName="ButtonsPanel">
+                            <DoubleAnimation
+                                Storyboard.TargetProperty="Height"
+                                EnableDependentAnimation="True"
+                                To="0"
+                                Duration="0:0:0.5"/>
+                            <DoubleAnimation
+                                Storyboard.TargetProperty="Opacity"
+                                To="0"
+                                Duration="0:0:0.5"/>
+                        </Storyboard>
+                    </VisualState.Storyboard>
+                </VisualState>
+                <VisualState x:Name="ButtonsVisibleState">
+                    <VisualState.Setters>
+                        <Setter Target="ButtonsPanel.IsHitTestVisible" Value="True"/>
+                    </VisualState.Setters>
+                    <VisualState.Storyboard>
+                        <Storyboard TargetName="ButtonsPanel">
+                            <DoubleAnimation
+                                Storyboard.TargetProperty="Height"
+                                EnableDependentAnimation="True"
+                                To="56"
+                                Duration="0:0:0.5"/>
+                            <DoubleAnimation
+                                Storyboard.TargetProperty="Opacity"
+                                To="1"
+                                Duration="0:0:0.5"/>
+                        </Storyboard>
+                    </VisualState.Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
 
-                <!--ZoomedInView-->
-                <ListView
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    IsItemClickEnabled="False"
-                    SelectionMode="None">
-                    <ListView.Resources>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Margin" Value="0,0,0,0"/>
-                            <Setter Property="Padding" Value="12,16,12,16"/>
-                            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                            <Setter Property="Background" Value="#FF171717"/>
-                        </Style>
-                    </ListView.Resources>
-                    <ListView.GroupStyle>
-                        <GroupStyle HeaderContainerStyle="{StaticResource ExpandedListViewHeaderItemStyle}">
-                            <GroupStyle.HeaderTemplate>
-                                <DataTemplate x:DataType="collections:IReadOnlyObservableGroup">
-                                    <jumpList:SemanticZoomZoomedInViewHeaderTemplate
-                                        Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert((enums:IdeResultSection)Key)}"
-                                        Margin="0,-8,0,0"/>
-                                </DataTemplate>
-                            </GroupStyle.HeaderTemplate>
-                        </GroupStyle>
-                    </ListView.GroupStyle>
-                    <ListView.ItemTemplateSelector>
-                        <templateSelectors:IdeResultSectionTemplateSelector
-                            ExceptionTypeTemplate="{StaticResource ExceptionTypeTemplate}"
-                            ErrorLocationTemplate="{StaticResource ErrorPositionTemplate}"
-                            StdoutTemplate="{StaticResource StdoutTemplate}"
-                            StackTraceTemplate="{StaticResource StackTraceTemplate}"
-                            SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
-                            FunctionDefinitionsTemplate="{StaticResource FunctionDefinitionsTemploate}"
-                            MemoryStateTemplate="{StaticResource MemoryStateTemploate}"
-                            StatisticsTemplate="{StaticResource StatisticsTemplate}"/>
-                    </ListView.ItemTemplateSelector>
-                </ListView>
-            </SemanticZoom.ZoomedInView>
-            <SemanticZoom.ZoomedOutView>
+        <Grid uiCompositionAnimations:ClipHelper.ClipToBounds="True">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-                <!--ZoomedOutView-->
-                <ListView>
-                    <ListView.Resources>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Margin" Value="0,0,0,4"/>
-                            <Setter Property="Padding" Value="12,16,12,16"/>
-                            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                            <Setter Property="Background" Value="#FF171717"/>
-                        </Style>
-                    </ListView.Resources>
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="ICollectionViewGroup">
-                            <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
-                                Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert((enums:IdeResultSection)Group.(collections:IReadOnlyObservableGroup.Key))}">
-                                <jumpList:SemanticZoomZoomedOutViewHeaderTemplate.DescriptionSpan>
-                                    <Span attachedProperties:IdeResultSectionDescriptionHelper.Section="{x:Bind (models:IdeResultWithSectionInfo)GroupItems[0]}"/>
-                                </jumpList:SemanticZoomZoomedOutViewHeaderTemplate.DescriptionSpan>
-                            </jumpList:SemanticZoomZoomedOutViewHeaderTemplate>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </SemanticZoom.ZoomedOutView>
-        </SemanticZoom>
+            <!--Semantic zoom-->
+            <SemanticZoom attachedProperties:SemanticZoomHelper.Source="{x:Bind ViewModel.Source, Mode=OneWay}">
+                <SemanticZoom.ZoomedInView>
+
+                    <!--ZoomedInView-->
+                    <ListView
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        IsItemClickEnabled="False"
+                        SelectionMode="None">
+                        <ListView.Resources>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Margin" Value="0,0,0,0"/>
+                                <Setter Property="Padding" Value="12,16,12,16"/>
+                                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="Background" Value="#FF171717"/>
+                            </Style>
+                        </ListView.Resources>
+                        <ListView.GroupStyle>
+                            <GroupStyle HeaderContainerStyle="{StaticResource ExpandedListViewHeaderItemStyle}">
+                                <GroupStyle.HeaderTemplate>
+                                    <DataTemplate x:DataType="collections:IReadOnlyObservableGroup">
+                                        <jumpList:SemanticZoomZoomedInViewHeaderTemplate
+                                            Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert((enums:IdeResultSection)Key)}"
+                                            Margin="0,-8,0,0"/>
+                                    </DataTemplate>
+                                </GroupStyle.HeaderTemplate>
+                            </GroupStyle>
+                        </ListView.GroupStyle>
+                        <ListView.ItemTemplateSelector>
+                            <templateSelectors:IdeResultSectionTemplateSelector
+                                ExceptionTypeTemplate="{StaticResource ExceptionTypeTemplate}"
+                                ErrorLocationTemplate="{StaticResource ErrorPositionTemplate}"
+                                StdoutTemplate="{StaticResource StdoutTemplate}"
+                                StackTraceTemplate="{StaticResource StackTraceTemplate}"
+                                SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
+                                FunctionDefinitionsTemplate="{StaticResource FunctionDefinitionsTemploate}"
+                                MemoryStateTemplate="{StaticResource MemoryStateTemploate}"
+                                StatisticsTemplate="{StaticResource StatisticsTemplate}"/>
+                        </ListView.ItemTemplateSelector>
+                    </ListView>
+                </SemanticZoom.ZoomedInView>
+                <SemanticZoom.ZoomedOutView>
+
+                    <!--ZoomedOutView-->
+                    <ListView>
+                        <ListView.Resources>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Margin" Value="0,0,0,4"/>
+                                <Setter Property="Padding" Value="12,16,12,16"/>
+                                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="Background" Value="#FF171717"/>
+                            </Style>
+                        </ListView.Resources>
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="ICollectionViewGroup">
+                                <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
+                                    Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert((enums:IdeResultSection)Group.(collections:IReadOnlyObservableGroup.Key))}">
+                                    <jumpList:SemanticZoomZoomedOutViewHeaderTemplate.DescriptionSpan>
+                                        <Span attachedProperties:IdeResultSectionDescriptionHelper.Section="{x:Bind (models:IdeResultWithSectionInfo)GroupItems[0]}"/>
+                                    </jumpList:SemanticZoomZoomedOutViewHeaderTemplate.DescriptionSpan>
+                                </jumpList:SemanticZoomZoomedOutViewHeaderTemplate>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </SemanticZoom.ZoomedOutView>
+            </SemanticZoom>
+
+            <!--Breakpoints control buttons-->
+            <controls:DropShadowPanel
+                x:Name="ButtonsPanel"
+                x:Load="False"
+                Height="0"
+                Opacity="0"
+                Grid.Row="1"
+                Color="Black"
+                BlurRadius="12"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Stretch">
+                <Grid ColumnSpacing="4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <!--Continue-->
+                    <Button Background="#FF171717" Style="{StaticResource ExpandedSquareButtonRevealStyle}">
+                        <StackPanel Orientation="Horizontal">
+                            <Polygon 
+                                Points="0,0 0,18.75 15,9.375" 
+                                Stroke="DarkGreen" 
+                                Fill="Green" 
+                                VerticalAlignment="Center"/>
+                            <TextBlock
+                                Margin="12,0,0,0"
+                                Text="Continue"/>
+                        </StackPanel>
+                    </Button>
+
+                    <!--Skip-->
+                    <Button Background="#FF171717"
+                            Grid.Column="1"
+                            Style="{StaticResource ExpandedSquareButtonRevealStyle}">
+                        <StackPanel Orientation="Horizontal">
+                            <Polygon 
+                                Points="0,0 0,18.75 12,9.375"
+                                Stroke="DarkGreen"
+                                Fill="#FF4F824C"/>
+                            <Polygon
+                                Points="0,0 0,18.75 12,9.375"
+                                Stroke="DarkGreen"
+                                Fill="#FF4F824C"/>
+                            <TextBlock
+                                Margin="12,0,0,0"
+                                Text="Skip"/>
+                        </StackPanel>
+                    </Button>
+                </Grid>
+            </controls:DropShadowPanel>
+        </Grid>
     </host:SubPageFrame>
 </UserControl>
