--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -14,6 +14,7 @@
     xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
     xmlns:enums="using:Brainf_ckSharp.Shared.Enums.Settings"
     xmlns:dataTemplates="using:Brainf_ckSharp.Uwp.Controls.DataTemplates"
+    xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -81,7 +82,13 @@
                     MinWidth="140"
                     ItemsSource="{markupExtensions:EnumValues Type=enums:BracketsFormattingStyle}"
                     SelectedItem="{x:Bind Instance.BracketsFormattingStyle, Mode=OneWay}"
-                    SelectionChanged="BracketFormattingStyle_SelectedItemChanged"/>
+                    SelectionChanged="BracketFormattingStyle_SelectedItemChanged">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate x:DataType="enums:BracketsFormattingStyle">
+                            <TextBlock Text="{x:Bind convertersSubPages:BracketsFormattingStyleConverter.Convert((enums:BracketsFormattingStyle))}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
 
                 <!--Tab length-->
                 <TextBlock
